k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-devops-demo
spec:
  rules:
  - host: "python-devops-demo.test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-devops-demo
            port:
              number: 8080
